--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1080,6 +1080,24 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] label, [role="form"] fie
 }
 
 /* line 251, styleguide/scss/core/_core-forms.scss */
+form fieldset ul[role="listbox"] [role="menuitemcheckbox"]:last-of-type,
+form fieldset ul[role="listbox"] [role="menuitemradio"]:last-of-type, form fieldset ol[role="listbox"] [role="menuitemcheckbox"]:last-of-type,
+form fieldset ol[role="listbox"] [role="menuitemradio"]:last-of-type, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"]:last-of-type,
+[role="form"] fieldset ul[role="listbox"] [role="menuitemradio"]:last-of-type, [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"]:last-of-type,
+[role="form"] fieldset ol[role="listbox"] [role="menuitemradio"]:last-of-type {
+  margin-bottom: 0;
+}
+
+/* line 255, styleguide/scss/core/_core-forms.scss */
+form fieldset ul[role="listbox"] [role="menuitemcheckbox"]:last-of-type label,
+form fieldset ul[role="listbox"] [role="menuitemradio"]:last-of-type label, form fieldset ol[role="listbox"] [role="menuitemcheckbox"]:last-of-type label,
+form fieldset ol[role="listbox"] [role="menuitemradio"]:last-of-type label, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"]:last-of-type label,
+[role="form"] fieldset ul[role="listbox"] [role="menuitemradio"]:last-of-type label, [role="form"] fieldset ol[role="listbox"] [role="menuitemcheckbox"]:last-of-type label,
+[role="form"] fieldset ol[role="listbox"] [role="menuitemradio"]:last-of-type label {
+  padding-bottom: 0;
+}
+
+/* line 261, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemradio"][disabled], form fieldset ol[role="listbox"] [role="menuitemcheckbox"][disabled],
 form fieldset ol[role="listbox"] [role="menuitemradio"][disabled], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"][disabled],
@@ -1089,7 +1107,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"][disabled], [role="form"]
   color: #ababab;
 }
 
-/* line 256, styleguide/scss/core/_core-forms.scss */
+/* line 266, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"][disabled] label,
 form fieldset ul[role="listbox"] [role="menuitemradio"][disabled] label, form fieldset ol[role="listbox"] [role="menuitemcheckbox"][disabled] label,
 form fieldset ol[role="listbox"] [role="menuitemradio"][disabled] label, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"][disabled] label,
@@ -1098,7 +1116,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"][disabled] label, [role="
   cursor: not-allowed;
 }
 
-/* line 262, styleguide/scss/core/_core-forms.scss */
+/* line 272, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"][error],
 form fieldset ul[role="listbox"] [role="menuitemradio"][error], form fieldset ol[role="listbox"] [role="menuitemcheckbox"][error],
 form fieldset ol[role="listbox"] [role="menuitemradio"][error], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"][error],
@@ -1107,7 +1125,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"][error], [role="form"] fi
   color: #b94a48;
 }
 
-/* line 267, styleguide/scss/core/_core-forms.scss */
+/* line 277, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"][success],
 form fieldset ul[role="listbox"] [role="menuitemradio"][success], form fieldset ol[role="listbox"] [role="menuitemcheckbox"][success],
 form fieldset ol[role="listbox"] [role="menuitemradio"][success], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"][success],
@@ -1116,7 +1134,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"][success], [role="form"] 
   color: #468847;
 }
 
-/* line 272, styleguide/scss/core/_core-forms.scss */
+/* line 282, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
@@ -1132,7 +1150,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="radio"], [ro
   margin-right: 0.4rem;
 }
 
-/* line 284, styleguide/scss/core/_core-forms.scss */
+/* line 294, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 fieldset[disabled] form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1153,7 +1171,7 @@ fieldset[disabled]
   cursor: not-allowed;
 }
 
-/* line 288, styleguide/scss/core/_core-forms.scss */
+/* line 298, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
@@ -1179,7 +1197,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], 
 }
 
 @media screen and (min-width: 50em) {
-  /* line 288, styleguide/scss/core/_core-forms.scss */
+  /* line 298, styleguide/scss/core/_core-forms.scss */
   form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
   form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"], form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
   form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"],
@@ -1189,7 +1207,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"], 
   }
 }
 
-/* line 318, styleguide/scss/core/_core-forms.scss */
+/* line 328, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, form fieldset ol[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
 form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:checked, [role="form"] fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"]:checked,
@@ -1199,7 +1217,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"]:c
   border: none;
 }
 
-/* line 329, styleguide/scss/core/_core-forms.scss */
+/* line 339, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="radio"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemcheckbox"] input[type="checkbox"][disabled],
 form fieldset ul[role="listbox"] [role="menuitemradio"] input[type="radio"][disabled],
@@ -1216,7 +1234,7 @@ form fieldset ol[role="listbox"] [role="menuitemradio"] input[type="checkbox"][d
   cursor: not-allowed;
 }
 
-/* line 338, styleguide/scss/core/_core-forms.scss */
+/* line 348, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="file"], [role="form"] fieldset [role="file"] {
   display: inline-block;
   min-width: 100%;
@@ -1227,20 +1245,20 @@ form fieldset [role="file"], [role="form"] fieldset [role="file"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 338, styleguide/scss/core/_core-forms.scss */
+  /* line 348, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="file"], [role="form"] fieldset [role="file"] {
     min-width: 50%;
     border-width: 0.08rem;
   }
 }
 
-/* line 357, styleguide/scss/core/_core-forms.scss */
+/* line 367, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="file"] input[type="file"], [role="form"] fieldset [role="file"] input[type="file"] {
   width: 100%;
   display: block;
 }
 
-/* line 365, styleguide/scss/core/_core-forms.scss */
+/* line 375, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
   display: inline-block;
   min-width: 100%;
@@ -1257,26 +1275,26 @@ form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 365, styleguide/scss/core/_core-forms.scss */
+  /* line 375, styleguide/scss/core/_core-forms.scss */
   form fieldset [role="listbox"], [role="form"] fieldset [role="listbox"] {
     min-width: 50%;
     border-width: 0.08rem;
   }
 }
 
-/* line 390, styleguide/scss/core/_core-forms.scss */
+/* line 400, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"][multiple], [role="form"] fieldset [role="listbox"][multiple] {
   background: none;
   padding: 0;
   overflow: hidden;
 }
 
-/* line 397, styleguide/scss/core/_core-forms.scss */
+/* line 407, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   display: none;
 }
 
-/* line 402, styleguide/scss/core/_core-forms.scss */
+/* line 412, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] select {
   width: 100%;
   max-width: 100%;
@@ -1293,24 +1311,24 @@ form fieldset [role="listbox"] select, [role="form"] fieldset [role="listbox"] s
   color: #2b303a;
 }
 
-/* line 422, styleguide/scss/core/_core-forms.scss */
+/* line 432, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select:focus, [role="form"] fieldset [role="listbox"] select:focus {
   outline: none;
 }
 
-/* line 428, styleguide/scss/core/_core-forms.scss */
+/* line 438, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select::-ms-expand, [role="form"] fieldset [role="listbox"] select::-ms-expand {
   background-color: transparent;
   border: 0;
 }
 
-/* line 434, styleguide/scss/core/_core-forms.scss */
+/* line 444, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple], [role="form"] fieldset [role="listbox"] select[multiple] {
   padding-right: 0;
   height: auto;
 }
 
-/* line 439, styleguide/scss/core/_core-forms.scss */
+/* line 449, styleguide/scss/core/_core-forms.scss */
 form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [role="listbox"] select[multiple] option {
   padding: 0.5rem 0.75rem;
   min-height: 1.5rem;
@@ -1318,79 +1336,79 @@ form fieldset [role="listbox"] select[multiple] option, [role="form"] fieldset [
   border-radius: 0.15rem;
 }
 
-/* line 450, styleguide/scss/core/_core-forms.scss */
+/* line 460, styleguide/scss/core/_core-forms.scss */
 form fieldset ul[role="listbox"], [role="form"] fieldset ul[role="listbox"] {
   padding: 0;
   border: none;
   background: none;
 }
 
-/* line 459, styleguide/scss/core/_core-forms.scss */
+/* line 469, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label, form fieldset .has-error label, [role="form"] fieldset[error] label, [role="form"] fieldset .has-error label {
   color: #b94a48;
 }
 
-/* line 463, styleguide/scss/core/_core-forms.scss */
+/* line 473, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error, form fieldset .has-error label span.field-validation-error, [role="form"] fieldset[error] label span.field-validation-error, [role="form"] fieldset .has-error label span.field-validation-error {
   display: inline-block;
   padding-top: 0.75rem;
 }
 
-/* line 468, styleguide/scss/core/_core-forms.scss */
+/* line 478, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] label span.field-validation-error:empty, form fieldset .has-error label span.field-validation-error:empty, [role="form"] fieldset[error] label span.field-validation-error:empty, [role="form"] fieldset .has-error label span.field-validation-error:empty {
   display: none;
 }
 
-/* line 475, styleguide/scss/core/_core-forms.scss */
+/* line 485, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper, form fieldset[error] .input-field-wrapper, form fieldset[error] .textarea-field-wrapper, form fieldset .has-error .select-field-wrapper, form fieldset .has-error .input-field-wrapper, form fieldset .has-error .textarea-field-wrapper, [role="form"] fieldset[error] .select-field-wrapper, [role="form"] fieldset[error] .input-field-wrapper, [role="form"] fieldset[error] .textarea-field-wrapper, [role="form"] fieldset .has-error .select-field-wrapper, [role="form"] fieldset .has-error .input-field-wrapper, [role="form"] fieldset .has-error .textarea-field-wrapper {
   border-color: #b94a48;
 }
 
-/* line 479, styleguide/scss/core/_core-forms.scss */
+/* line 489, styleguide/scss/core/_core-forms.scss */
 form fieldset[error] .select-field-wrapper input, form fieldset[error] .select-field-wrapper select, form fieldset[error] .select-field-wrapper textarea, form fieldset[error] .input-field-wrapper input, form fieldset[error] .input-field-wrapper select, form fieldset[error] .input-field-wrapper textarea, form fieldset[error] .textarea-field-wrapper input, form fieldset[error] .textarea-field-wrapper select, form fieldset[error] .textarea-field-wrapper textarea, form fieldset .has-error .select-field-wrapper input, form fieldset .has-error .select-field-wrapper select, form fieldset .has-error .select-field-wrapper textarea, form fieldset .has-error .input-field-wrapper input, form fieldset .has-error .input-field-wrapper select, form fieldset .has-error .input-field-wrapper textarea, form fieldset .has-error .textarea-field-wrapper input, form fieldset .has-error .textarea-field-wrapper select, form fieldset .has-error .textarea-field-wrapper textarea, [role="form"] fieldset[error] .select-field-wrapper input, [role="form"] fieldset[error] .select-field-wrapper select, [role="form"] fieldset[error] .select-field-wrapper textarea, [role="form"] fieldset[error] .input-field-wrapper input, [role="form"] fieldset[error] .input-field-wrapper select, [role="form"] fieldset[error] .input-field-wrapper textarea, [role="form"] fieldset[error] .textarea-field-wrapper input, [role="form"] fieldset[error] .textarea-field-wrapper select, [role="form"] fieldset[error] .textarea-field-wrapper textarea, [role="form"] fieldset .has-error .select-field-wrapper input, [role="form"] fieldset .has-error .select-field-wrapper select, [role="form"] fieldset .has-error .select-field-wrapper textarea, [role="form"] fieldset .has-error .input-field-wrapper input, [role="form"] fieldset .has-error .input-field-wrapper select, [role="form"] fieldset .has-error .input-field-wrapper textarea, [role="form"] fieldset .has-error .textarea-field-wrapper input, [role="form"] fieldset .has-error .textarea-field-wrapper select, [role="form"] fieldset .has-error .textarea-field-wrapper textarea {
   color: #b94a48;
 }
 
-/* line 485, styleguide/scss/core/_core-forms.scss */
+/* line 495, styleguide/scss/core/_core-forms.scss */
 form fieldset[error]:empty, form fieldset .has-error:empty, [role="form"] fieldset[error]:empty, [role="form"] fieldset .has-error:empty {
   display: none;
 }
 
-/* line 493, styleguide/scss/core/_core-forms.scss */
+/* line 503, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] label, [role="form"] fieldset[success] label {
   color: #468847;
 }
 
-/* line 498, styleguide/scss/core/_core-forms.scss */
+/* line 508, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper, form fieldset[success] .input-field-wrapper, form fieldset[success] .textarea-field-wrapper, [role="form"] fieldset[success] .select-field-wrapper, [role="form"] fieldset[success] .input-field-wrapper, [role="form"] fieldset[success] .textarea-field-wrapper {
   border-color: #468847;
 }
 
-/* line 502, styleguide/scss/core/_core-forms.scss */
+/* line 512, styleguide/scss/core/_core-forms.scss */
 form fieldset[success] .select-field-wrapper input, form fieldset[success] .select-field-wrapper select, form fieldset[success] .select-field-wrapper textarea, form fieldset[success] .input-field-wrapper input, form fieldset[success] .input-field-wrapper select, form fieldset[success] .input-field-wrapper textarea, form fieldset[success] .textarea-field-wrapper input, form fieldset[success] .textarea-field-wrapper select, form fieldset[success] .textarea-field-wrapper textarea, [role="form"] fieldset[success] .select-field-wrapper input, [role="form"] fieldset[success] .select-field-wrapper select, [role="form"] fieldset[success] .select-field-wrapper textarea, [role="form"] fieldset[success] .input-field-wrapper input, [role="form"] fieldset[success] .input-field-wrapper select, [role="form"] fieldset[success] .input-field-wrapper textarea, [role="form"] fieldset[success] .textarea-field-wrapper input, [role="form"] fieldset[success] .textarea-field-wrapper select, [role="form"] fieldset[success] .textarea-field-wrapper textarea {
   color: #468847;
 }
 
-/* line 510, styleguide/scss/core/_core-forms.scss */
+/* line 520, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled],
 form fieldset [readonly], [role="form"] fieldset [disabled],
 [role="form"] fieldset [readonly] {
   opacity: 1;
 }
 
-/* line 513, styleguide/scss/core/_core-forms.scss */
+/* line 523, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled]:not([role="menuitemcheckbox"]):not([role="menuitemradio"]),
 form fieldset [readonly]:not([role="menuitemcheckbox"]):not([role="menuitemradio"]), [role="form"] fieldset [disabled]:not([role="menuitemcheckbox"]):not([role="menuitemradio"]),
 [role="form"] fieldset [readonly]:not([role="menuitemcheckbox"]):not([role="menuitemradio"]) {
   background-color: #f5f5f5;
 }
 
-/* line 521, styleguide/scss/core/_core-forms.scss */
+/* line 531, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled], [role="form"] fieldset [disabled] {
   cursor: not-allowed;
 }
 
-/* line 525, styleguide/scss/core/_core-forms.scss */
+/* line 535, styleguide/scss/core/_core-forms.scss */
 form fieldset [disabled] input, form fieldset [disabled] textarea, [role="form"] fieldset [disabled] input, [role="form"] fieldset [disabled] textarea {
   color: #ababab;
   cursor: not-allowed;
