--- a/styleguide/scss/custom/_fonts.scss
+++ b/styleguide/scss/custom/_fonts.scss
@@ -2,4 +2,7 @@
 //  $FONTS
 //-----------------------------------------------------------------------//
 
+// OPTIONAL: Specific to this implementation
+$font-logo: 'Quicksand', Helvetica, Arial, sans-serif;
+
 @import url('https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Gudea|Quicksand');
