--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -242,7 +242,7 @@ hr {
     height: 0.15rem;
     min-height: 0.15rem;
     border: none;
-    border-color: sf-get-color(graylighter);
+    border-color: $line-color;
     border-bottom-width: 0.15rem;
     border-bottom-style: solid;
 
