--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1845,7 +1845,7 @@ hr {
   height: 0.15rem;
   min-height: 0.15rem;
   border: none;
-  border-color: #dfdfdf;
+  border-color: rgba(0, 0, 0, 0.15);
   border-bottom-width: 0.15rem;
   border-bottom-style: solid;
 }
