--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -1782,62 +1782,44 @@ code {
 }
 
 /* line 187, styleguide/scss/core/_core-typography.scss */
-pre[class*="language-"] {
-  margin-top: 0.8896rem;
-  margin-bottom: 0.8896rem;
+pre, pre[class*="language-"] {
+  border-radius: 0;
+  margin-top: 1rem;
+  margin-bottom: 1.5rem;
+  margin-left: -1.112rem;
+  margin-right: -1.112rem;
+  padding: 1.5rem 1.112rem;
 }
 
 @media screen and (min-width: 33.75em) {
   /* line 187, styleguide/scss/core/_core-typography.scss */
-  pre[class*="language-"] {
-    margin-top: 1.34rem;
-    margin-bottom: 1.34rem;
-  }
-}
-
-/* line 197, styleguide/scss/core/_core-typography.scss */
-pre, pre[class*="language-"] {
-  border-radius: 0;
-  margin: 1rem 0;
-  margin-bottom: 1.5rem;
-  padding: 1.5rem 1.5rem;
-}
-
-@media screen and (min-width: 33.75em) {
-  /* line 197, styleguide/scss/core/_core-typography.scss */
   pre, pre[class*="language-"] {
     border-radius: 0.25rem;
-    margin: 1rem 0;
+    margin-top: 1rem;
     margin-bottom: 1.5rem;
+    margin-left: 0vw;
+    margin-right: 0vw;
     padding: 1rem;
   }
 }
 
-/* line 212, styleguide/scss/core/_core-typography.scss */
+/* line 208, styleguide/scss/core/_core-typography.scss */
 pre > code, pre[class*="language-"] > code {
   display: block;
 }
 
-/* line 217, styleguide/scss/core/_core-typography.scss */
+/* line 213, styleguide/scss/core/_core-typography.scss */
 pre:last-child, pre[class*="language-"]:last-child {
   margin-bottom: 0;
 }
 
-@media screen and (max-width: 33.74em) {
-  /* line 223, styleguide/scss/core/_core-typography.scss */
-  pre {
-    margin-left: -1.112rem;
-    margin-right: -1.112rem;
-  }
-}
-
-/* line 231, styleguide/scss/core/_core-typography.scss */
+/* line 219, styleguide/scss/core/_core-typography.scss */
 code[class*="language-"], pre[class*="language-"] {
   text-shadow: none !important;
   overflow: hidden;
 }
 
-/* line 237, styleguide/scss/core/_core-typography.scss */
+/* line 225, styleguide/scss/core/_core-typography.scss */
 hr {
   margin: 0;
   margin-top: 5rem;
@@ -1851,7 +1833,7 @@ hr {
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 237, styleguide/scss/core/_core-typography.scss */
+  /* line 225, styleguide/scss/core/_core-typography.scss */
   hr {
     height: 0.1rem;
     min-height: 0.1rem;
@@ -1869,15 +1851,107 @@ video {
 }
 
 /* line 43, styleguide/scss/core/_core-media.scss */
-img {
+img, object, svg {
+  position: relative;
+  width: 100%;
   max-width: 100%;
   -ms-interpolation-mode: bicubic;
 }
 
-/* line 50, styleguide/scss/core/_core-media.scss */
+/* line 51, styleguide/scss/core/_core-media.scss */
+svg {
+  height: auto;
+}
+
+/* line 57, styleguide/scss/core/_core-media.scss */
+object[width],
+object[height],
 img[width],
 img[height] {
+  width: auto;
   max-width: none;
+}
+
+/* line 66, styleguide/scss/core/_core-media.scss */
+span[role="img"], span[role="icon"] {
+  display: inline-block;
+  line-height: 0;
+}
+
+/* line 72, styleguide/scss/core/_core-media.scss */
+object[type="image/svg+xml"] {
+  display: inline-block;
+  line-height: 0;
+  pointer-events: none;
+}
+
+@media screen and (max-width: 33.74em) {
+  /* line 79, styleguide/scss/core/_core-media.scss */
+  .image-wrapper {
+    margin-left: -1.112rem;
+    margin-right: -1.112rem;
+  }
+  /* line 85, styleguide/scss/core/_core-media.scss */
+  .image-wrapper img {
+    max-width: 100vw;
+    width: 100vw;
+  }
+}
+
+@media screen and (max-width: 33.74em) {
+  /* line 100, styleguide/scss/core/_core-media.scss */
+  [continuous] .video-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+
+@media screen and (max-width: 33.74em) {
+  /* line 109, styleguide/scss/core/_core-media.scss */
+  .video-wrapper {
+    margin-left: -1.112rem;
+    margin-right: -1.112rem;
+  }
+}
+
+/* line 116, styleguide/scss/core/_core-media.scss */
+.video-wrapper [role="video"], .video-wrapper video {
+  background-color: #dfdfdf;
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+@media screen and (min-width: 33.75em) {
+  /* line 116, styleguide/scss/core/_core-media.scss */
+  .video-wrapper [role="video"], .video-wrapper video {
+    border-radius: 0.25rem;
+    overflow: hidden;
+  }
+}
+
+/* line 20, styleguide/scss/core/_core-media.scss */
+.video-wrapper [role="video"] iframe, .video-wrapper [role="video"] object, .video-wrapper [role="video"] embed, .video-wrapper video iframe, .video-wrapper video object, .video-wrapper video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* line 129, styleguide/scss/core/_core-media.scss */
+.video-wrapper small {
+  display: block;
+  margin-top: 0.75rem;
+}
+
+@media screen and (max-width: 33.74em) {
+  /* line 129, styleguide/scss/core/_core-media.scss */
+  .video-wrapper small {
+    margin-left: 1.112rem;
+    margin-right: 1.112rem;
+  }
 }
 
 /* line 21, styleguide/scss/custom/_typography.scss */
