--- a/styleguide/scss/core/_core-buttons.scss
+++ b/styleguide/scss/core/_core-buttons.scss
@@ -17,6 +17,7 @@
 
 button, input[type="button"], input[type="submit"], input[type="cancel"], a[role="button"] {
 
+    position: relative;
     display: inline-block;
     top: -1px;
     margin: 0;
