--- a/styleguide/scss/core/_core-media.scss
+++ b/styleguide/scss/core/_core-media.scss
@@ -18,7 +18,6 @@
     max-width: 100%;
 
     iframe, object, embed {
-
         position: absolute;
         top: 0;
         left: 0;
@@ -37,11 +36,12 @@ audio,
 canvas,
 img,
 svg,
-video { vertical-align: middle; }
+video {
+    vertical-align: middle;
+}
 
 // Fluid images
 img, object, svg {
-
     position: relative;
     width: 100%;
     max-width: 100%;
@@ -49,7 +49,6 @@ img, object, svg {
 }
 
 svg {
-
     height: auto;
 }
 
@@ -58,19 +57,16 @@ object[width],
 object[height],
 img[width],
 img[height] {
-
     width: auto;
     max-width: none;
 }
 
 span[role="img"], span[role="icon"] {
-
     display: inline-block;
     line-height: 0;
 }
 
 object[type="image/svg+xml"] {
-
     display: inline-block;
     line-height: 0;
     pointer-events: none;
@@ -83,7 +79,6 @@ object[type="image/svg+xml"] {
         @include sf-margin-horizontal($mobile-page-margin * -1);
 
         img {
-
             max-width: 100vw;
             width: 100vw;
         }
@@ -100,7 +95,6 @@ object[type="image/svg+xml"] {
     .video-wrapper {
 
         @include sf-media($upto: tablet-portrait) {
-
             margin-bottom: 1rem;
         }
     }
@@ -118,7 +112,6 @@ object[type="image/svg+xml"] {
         background-color: sf-get-color(graylighter);
 
         @include sf-media($from: tablet-portrait) {
-
             border-radius: 0.25rem;
             overflow: hidden;
         }
