Fixes from website implementation

--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -280,8 +280,7 @@
         flex-grow: $sf-fbg-gridcell-flex-grow;
         flex-shrink: $sf-fbg-gridcell-flex-shrink;
 
-
-        & > * {
+        & > *:first-child {
 
             height: $sf-fbg-gridcell-presentation-height;
 
