Better grid spacing when siblings

--- a/styleguide/scss/core/_core-flexbox-grid.scss
+++ b/styleguide/scss/core/_core-flexbox-grid.scss
@@ -178,7 +178,15 @@
 
     @if ($row-gutter != false) {
 
-        margin-bottom: $row-gutter * -1;
+        & + & {
+
+            margin-bottom: 0;
+        }
+
+        & + &:last-child, &:last-child {
+
+            margin-bottom: $row-gutter * -1;
+        }
     }
 
     @if ($sf-fbg-box-sizing != false) {
