--- a/styleguide/scss/core/_core-typography.scss
+++ b/styleguide/scss/core/_core-typography.scss
@@ -57,9 +57,12 @@ h6 + h1, h6 + h2, h6 + h3, h6 + h4, h6 + h5, h6 + h6 {
 }
 
 p {
+
+    margin-top: 0;
     margin-bottom: 1.5rem;
 
     &:last-child {
+
         margin-bottom: 0;
     }
 }
@@ -199,8 +202,8 @@ code[class*="language-"], pre[class*="language-"] {
 }
 
 hr {
+
     margin: 0;
-    margin-top: 2rem;
     margin-bottom: 2rem;
     height: 0.15rem;
     min-height: 0.15rem;
@@ -210,8 +213,9 @@ hr {
     border-bottom-style: solid;
 
     @include sf-media($from: tablet-portrait) {
-        height: 0.1rem;
-        min-height: 0.1rem;
-        border-bottom-width: 0.1rem;
+
+        height: 0.15rem;
+        min-height: 0.15rem;
+        border-bottom-width: 0.15rem;
     }
 }
