Removed unnecessary equal height for mobile example

--- a/styleguide/stylesheets/styleguide.css
+++ b/styleguide/stylesheets/styleguide.css
@@ -5321,7 +5321,7 @@ body > div > div > div > div > main > section[role="region"] article#standard-gr
   flex-shrink: initial;
   flex-wrap: wrap;
   flex-direction: row;
-  align-items: stretch;
+  align-items: flex-start;
   justify-content: flex-start;
 }
 
@@ -5354,7 +5354,7 @@ body > div > div > div > div > main > section[role="region"] article#standard-gr
 
 /* line 287, styleguide/scss/core/_core-flexbox-grid.scss */
 body > div > div > div > div > main > section[role="region"] article#standard-grid-unit section[role="grid"]#single-gutters-equal-heights > [role="gridcell"] > *:first-child {
-  height: 100%;
+  height: auto;
 }
 
 @media screen and (min-width: 33.75em) {
@@ -5413,7 +5413,7 @@ body > div > div > div > div > main > section[role="region"] article#standard-gr
   }
 }
 
-/* line 762, styleguide/scss/styleguide.scss */
+/* line 761, styleguide/scss/styleguide.scss */
 body > div > div > div > div > main > section[role="region"] article#standard-grid-unit section[role="grid"]#single-gutters-centered {
   display: flex;
   position: relative;
@@ -5470,7 +5470,7 @@ body > div > div > div > div > main > section[role="region"] article#standard-gr
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 762, styleguide/scss/styleguide.scss */
+  /* line 761, styleguide/scss/styleguide.scss */
   body > div > div > div > div > main > section[role="region"] article#standard-grid-unit section[role="grid"]#single-gutters-centered {
     display: flex;
     position: relative;
@@ -5529,17 +5529,17 @@ body > div > div > div > div > main > section[role="region"] article#standard-gr
   }
 }
 
-/* line 779, styleguide/scss/styleguide.scss */
+/* line 778, styleguide/scss/styleguide.scss */
 body > div > div > div > div > main > section[role="region"] article#standard-grid-unit section[role="grid"]#single-gutters-centered > [role="gridcell"] {
   justify-content: start;
 }
 
-/* line 785, styleguide/scss/styleguide.scss */
+/* line 784, styleguide/scss/styleguide.scss */
 body > div > div > div > div > main > section[role="region"] article#standard-grid-unit section[role="grid"]#single-gutters-centered > [role="gridcell"] > section > div {
   text-align: left;
 }
 
-/* line 799, styleguide/scss/styleguide.scss */
+/* line 798, styleguide/scss/styleguide.scss */
 body > div > div > div > div > main > section[role="region"] article#form-unit [role="grid"]#form-buttons {
   display: flex;
   position: relative;
@@ -5592,7 +5592,7 @@ body > div > div > div > div > main > section[role="region"] article#form-unit [
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 799, styleguide/scss/styleguide.scss */
+  /* line 798, styleguide/scss/styleguide.scss */
   body > div > div > div > div > main > section[role="region"] article#form-unit [role="grid"]#form-buttons {
     display: flex;
     position: relative;
@@ -5648,7 +5648,7 @@ body > div > div > div > div > main > section[role="region"] article#form-unit [
 }
 
 @media screen and (min-width: 33.75em) {
-  /* line 813, styleguide/scss/styleguide.scss */
+  /* line 812, styleguide/scss/styleguide.scss */
   body > div > div > div > div > main > section[role="region"] article#form-unit [role="grid"]#form-fields {
     display: flex;
     position: relative;
@@ -5703,7 +5703,7 @@ body > div > div > div > div > main > section[role="region"] article#form-unit [
   }
 }
 
-/* line 822, styleguide/scss/styleguide.scss */
+/* line 821, styleguide/scss/styleguide.scss */
 body > div > div > div > div > main > section[role="region"] article#form-unit [role="grid"]#form-fields section {
   padding-top: 0;
   padding-bottom: 0;
