--- a/styleguide/scss/custom/_layout-footer.scss
+++ b/styleguide/scss/custom/_layout-footer.scss
@@ -2,9 +2,9 @@
 // $LAYOUT-FOOTER
 //-----------------------------------------------------------------------//
 
-body > div > div > div > div {
+body {
 
-    > footer {
+    & > footer {
 
         font-size: 0.9rem;
         text-align: center;
