--- a/styleguide/scss/core/_core-helpers.scss
+++ b/styleguide/scss/core/_core-helpers.scss
@@ -236,4 +236,261 @@
 // STYLES
 //-----------------------------------------------------------------------//
 
-// TBD
+.mobile-only {
+
+    @include sf-media($from: tablet-portrait) {
+        display: none;
+    }
+}
+
+@mixin set-top-vertical-gutter($include-mobile: true) {
+
+    @if ($include-mobile == true) {
+
+        margin-top: $vertical-gutter;
+    }
+
+    @include sf-media($from: tablet-portrait) {
+
+        margin-top: $tablet-portrait-vertical-gutter;
+    }
+
+    @include sf-media($from: tablet-landscape) {
+
+        margin-top: $tablet-landscape-vertical-gutter;
+    }
+
+    @include sf-media($from: notebook) {
+
+        margin-top: $notebook-vertical-gutter;
+    }
+
+    @include sf-media($from: desktop) {
+
+        margin-top: $desktop-vertical-gutter;
+    }
+
+    @include sf-media($from: elastic) {
+
+        margin-top: $elastic-vertical-gutter;
+    }
+}
+
+// @mixin clear-top-margins($include-mobile: true) {
+
+//     @if ($include-mobile == true) {
+
+//         margin-top: 0;
+//     }
+
+//     @include sf-media($from: tablet-portrait) {
+
+//         margin-top: 0;
+//     }
+
+//     @include sf-media($from: tablet-landscape) {
+
+//         margin-top: 0;
+//     }
+
+//     @include sf-media($from: notebook) {
+
+//         margin-top: 0;
+//     }
+
+//     @include sf-media($from: elastic) {
+
+//         margin-top: 0;
+//     }
+// }
+
+@mixin set-bottom-vertical-gutter($include-mobile: true) {
+
+    @if ($include-mobile == true) {
+
+        margin-bottom: $vertical-gutter;
+    }
+
+    @include sf-media($from: tablet-portrait) {
+
+        margin-bottom: $tablet-portrait-vertical-gutter;
+    }
+
+    @include sf-media($from: tablet-landscape) {
+
+        margin-bottom: $tablet-landscape-vertical-gutter;
+    }
+
+    @include sf-media($from: notebook) {
+
+        margin-bottom: $notebook-vertical-gutter;
+    }
+
+    @include sf-media($from: desktop) {
+
+        margin-bottom: $desktop-vertical-gutter;
+    }
+
+    @include sf-media($from: elastic) {
+
+        margin-bottom: $elastic-vertical-gutter;
+    }
+}
+
+// @mixin clear-bottom-margins($include-mobile: true) {
+
+//     @if ($include-mobile == true) {
+
+//         margin-bottom: 0;
+//     }
+
+//     @include sf-media($from: tablet-portrait) {
+
+//         margin-bottom: 0;
+//     }
+
+//     @include sf-media($from: tablet-landscape) {
+
+//         margin-bottom: 0;
+//     }
+
+//     @include sf-media($from: notebook) {
+
+//         margin-bottom: 0;
+//     }
+
+//     @include sf-media($from: elastic) {
+
+//         margin-bottom: 0;
+//     }
+// }
+
+@mixin set-horizontal-unit-padding($include-mobile: true) {
+
+    @if ($include-mobile == true) {
+
+        @include sf-padding-horizontal($horizontal-unit-padding);
+    }
+
+    @include sf-media($from: tablet-portrait) {
+
+        @include sf-padding-horizontal($tablet-portrait-horizontal-unit-padding);
+    }
+
+    @include sf-media($from: tablet-landscape) {
+
+        @include sf-padding-horizontal($tablet-landscape-horizontal-unit-padding);
+    }
+
+    @include sf-media($from: notebook) {
+
+        @include sf-padding-horizontal($notebook-horizontal-unit-padding);
+    }
+
+    @include sf-media($from: desktop) {
+
+        @include sf-padding-horizontal($desktop-horizontal-unit-padding);
+    }
+
+    @include sf-media($from: elastic) {
+
+        @include sf-padding-horizontal($elastic-horizontal-unit-padding);
+    }
+}
+
+@mixin set-top-unit-padding($include-mobile: true) {
+
+    @if ($include-mobile == true) {
+
+        padding-top: $vertical-unit-padding;
+    }
+
+    @include sf-media($from: tablet-portrait) {
+
+        padding-top: $tablet-portrait-vertical-unit-padding;
+    }
+
+    @include sf-media($from: tablet-landscape) {
+
+        padding-top: $tablet-landscape-vertical-unit-padding;
+    }
+
+    @include sf-media($from: notebook) {
+
+        padding-top: $notebook-vertical-unit-padding;
+    }
+
+    @include sf-media($from: desktop) {
+
+        padding-top: $desktop-vertical-unit-padding;
+    }
+
+    @include sf-media($from: elastic) {
+
+        padding-top: $elastic-vertical-unit-padding;
+    }
+}
+
+@mixin set-bottom-unit-padding($include-mobile: true) {
+
+    @if ($include-mobile == true) {
+
+        padding-bottom: $vertical-unit-padding;
+    }
+
+    @include sf-media($from: tablet-portrait) {
+
+        padding-bottom: $tablet-portrait-vertical-unit-padding;
+    }
+
+    @include sf-media($from: tablet-landscape) {
+
+        padding-bottom: $tablet-landscape-vertical-unit-padding;
+    }
+
+    @include sf-media($from: notebook) {
+
+        padding-bottom: $notebook-vertical-unit-padding;
+    }
+
+    @include sf-media($from: desktop) {
+
+        padding-bottom: $desktop-vertical-unit-padding;
+    }
+
+    @include sf-media($from: elastic) {
+
+        padding-bottom: $elastic-vertical-unit-padding;
+    }
+}
+
+@function line-style() {
+
+    @return solid $mobile-lw-1px $line-color;
+}
+
+@function tablet-portrait-line-style() {
+
+    @return solid $lw-1px $line-color;
+}
+
+@for $i from 10 through 100 {
+
+    .width-pct-#{$i} {
+
+        @include sf-media($upto: tablet-portrait) {
+
+            width: to-length($i, '%') !important;
+            margin: 0 auto;
+        }
+    }
+
+    .width-tablet-portrait-pct-#{$i} {
+
+        @include sf-media($from: tablet-portrait) {
+
+            width: to-length($i, '%') !important;
+            margin: 0 auto;
+        }
+    }
+}
