--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -8,38 +8,17 @@
 @import "custom/fonts";
 @import "custom/typography";
 @import "custom/forms";
+@import "custom/grids";
 @import "custom/buttons";
 @import "custom/lists-and-tables";
 @import "custom/media";
+@import "custom/layout-defaults";
 @import "custom/layout-header";
 @import "custom/layout-footer";
 
-html {
-
-    @include sf-set-color-scheme(graylightest);
-}
-
 body {
-
-    //------------------------------------//
-    //  PRIMARY SITE WRAPPER
-    //------------------------------------//
-    > div {
-
-        max-width: $elastic-breakpoint;
-        margin-left: auto;
-        margin-right: auto;
-
-        main {
-
-            @include sf-set-color-scheme(default);
-        }
-    }
-}
-
-body > div > div > div > div {
     
-    > main {
+    & > main {
 
         // Primary wrapped containers with an elastic max-width
         > section[role="region"] {
@@ -397,397 +376,6 @@ body > div > div > div > div {
                         }
 
                         $counter: $counter + 1;
-                    }
-                }
-
-                &#standard-grid-unit {
-
-                    p {
-
-                        margin-top: 0;
-                        margin-bottom: 0.8896rem;
-
-                        @include sf-media($from: tablet-portrait) {
-
-                            margin-bottom: 1.005rem;
-                        }
-
-                        &:last-child {
-
-                            margin-bottom: 0;
-                        }
-
-                        &[role="definition"] {
-
-                            @include sf-hide($from: tablet-portrait);
-                        }
-                    }
-
-                    section[role="grid"] {
-                        
-                        // Grid cell defaults
-                        [role="gridcell"] {
-
-                            p {
-                            
-                                padding-top: 0.6672rem;
-                                line-height: 1.3;
-
-                                @include sf-media($from: tablet-portrait) {
-
-                                    padding-top: 0.67rem;
-                                }
-                            }
-
-                            h3 {
-                                
-                                margin-top: 0;
-                            }
-                                
-                            &:nth-child(1) {
-
-                                @include sf-set-color-scheme (primary);
-                            }
-
-                            &:nth-child(2) {
-
-                                @include sf-set-color-scheme (secondary);
-                            }
-
-                            &:nth-child(3) {
-
-                                @include sf-set-color-scheme (tertiary);
-                            }
-
-                            &:nth-child(4) {
-
-                                @include sf-set-color-scheme (quaternary);
-                            }
-
-                            &:nth-child(5) {
-
-                                @include sf-set-color-scheme (gold);
-                            }
-
-                            &:nth-child(6) {
-
-                                @include sf-set-color-scheme (green);
-                            }
-
-                            &:nth-child(7) {
-
-                                @include sf-set-color-scheme (orange);
-                            }
-
-                            &:nth-child(8) {
-
-                                @include sf-set-color-scheme (red);
-                            }
-
-                            > section {
-
-                                padding-top: 0;
-                                padding-bottom: 0;
-
-                                > div {
-
-                                    padding: 1.0008rem;
-                                    color: sf-get-color(white);
-
-                                    text-align: center;
-
-                                    @include sf-media($from: tablet-portrait) {
-
-                                        padding: 1.34rem;
-                                    }
-
-                                    h3 {
-
-                                        font-weight: normal;
-                                        color: sf-get-color(white);
-                                        font-size: 1.5568rem;
-                                        line-height: 1.5568rem;
-
-                                        padding-top: 0;
-                                        border-bottom: 0;
-                                        margin-bottom: 0;
-
-                                        @include sf-media($from: tablet-portrait) {
-
-                                            font-size: 1.675rem;
-                                            line-height: 1.675rem;
-                                        }
-                                    }
-                                }
-                            }
-                        }
-
-                        &#single-row {
-
-                            @include sf-flexbox-grid();
-
-                            > [role="gridcell"] {
-
-                                @include sf-set-width (
-                                    $from: tablet-portrait,
-                                    $width: one-third
-                                );
-
-                                &:nth-child(3), &:nth-child(4) {
-
-                                    @include sf-set-width (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth
-                                    );
-                                }
-                            }
-                        }
-
-                        &#push-pull {
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $gridcell-width: one-third
-                            );
-
-                            > [role="gridcell"] {
-
-                                &:nth-child(1) {
-
-                                    @include sf-push (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth);
-                                }
-
-                                &:nth-child(2) {
-
-                                    @include sf-push (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth);
-                                }
-                            }
-                        }
-
-                        &#single-row-reverse {
-
-                            @include sf-flexbox-grid(
-                                $use-reverse: true
-                            );
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $gridcell-width: one-third,
-                                $use-reverse: true
-                            );
-                        }
-
-                        &#single-gutters, &#single-gutters-nested {
-
-                            @include sf-flexbox-grid(
-                                $row-gutter: 1.25rem
-                            );
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $gridcell-width: one-third,
-                                $gutter: 2%,
-                                $row-gutter: 1.25rem
-                            );
-
-                            > [role="gridcell"] {
-
-                                [role="grid"] {
-
-                                    @include sf-flexbox-grid();
-
-                                    &#nested1 {
-
-                                        > [role="gridcell"] {
-
-                                            font-size: 0.7rem;
-                                            line-height: 1.5;
-
-                                            h3 {
-
-                                                font-size: 1rem;
-                                                line-height: 1.5;
-                                            }
-
-                                            section > div {
-
-                                                padding: 0.6672rem;
-
-                                                @include sf-media($from: tablet-portrait) {
-
-                                                    padding: 0.67rem;
-                                                }
-                                            }
-
-                                            @include sf-set-width (
-                                                $from: tablet-portrait,
-                                                $width: one-half
-                                            );
-                                        }
-                                    }
-
-                                    &#nested2 {
-
-                                        font-size: 0.7rem;
-                                        line-height: 1.5;
-
-                                        h3 {
-
-                                            font-size: 1rem;
-                                            line-height: 1.5;
-                                        }
-
-                                        section > div {
-
-                                            padding: 0.6672rem;
-
-                                            @include sf-media($from: tablet-portrait) {
-
-                                                padding: 0.67rem;
-                                            }
-                                        }
-
-                                        @include sf-flexbox-grid();
-
-                                        > [role="gridcell"] {
-
-                                            @include sf-set-width (
-                                                $from: tablet-portrait,
-                                                $width: one-whole
-                                            );
-                                        }
-                                    }
-                                }
-                            }
-                        }
-
-                        &#push-pull-gutters {
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $gridcell-width: one-third,
-                                $gutter: 2%
-                            );
-
-                            > [role="gridcell"] {
-
-                                &:nth-child(1) {
-
-                                    @include sf-push (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth);
-                                }
-
-                                &:nth-child(2) {
-
-                                    @include sf-push (
-                                        $from: tablet-portrait,
-                                        $width: one-sixth);
-                                }
-                            }
-                        }
-
-                        &#single-gutters-reverse {
-
-                            @include sf-flexbox-grid(
-                                $use-reverse: true,
-                                $row-gutter: 1.25rem
-                            );
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $use-reverse: true,
-                                $gridcell-width: one-third,
-                                $gutter: 2%,
-                                $row-gutter: 0
-                            );
-                        }
-
-                        &#single-gutters-varied {
-
-                            @include sf-flexbox-grid(
-                                $enable-gutters: true,
-                                $row-gutter: 1.25rem
-                            );
-
-                            > [role="gridcell"] {
-
-                                @include sf-set-width (
-                                    $from: tablet-portrait,
-                                    $width: one-third,
-                                    $gutter: 2%
-                                );
-
-                                &:nth-child(4) {
-
-                                    @include sf-set-width (
-                                        $from: tablet-portrait,
-                                        $width: one-half,
-                                        $gutter: 2%
-                                    );
-                                }
-
-                                &:nth-child(5), &:nth-child(6) {
-
-                                    @include sf-set-width (
-                                        $from: tablet-portrait,
-                                        $width: one-quarter,
-                                        $gutter: 2%
-                                    );
-                                }
-                            }
-                        }
-
-                        &#single-gutters-equal-heights {
-
-                            @include sf-flexbox-grid(
-                                $row-gutter: 1.25rem
-                            );
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $use-equal-heights: true,
-                                $enable-gutters: true,
-                                $gridcell-width: one-third,
-                                $gutter: 2%,
-                                $row-gutter: 1.25rem
-                            );
-                        }
-
-                        &#single-gutters-centered {
-
-                            @include sf-flexbox-grid(
-                                $centered-grid: true,
-                                $row-gutter: 1.25rem
-                            );
-
-                            @include sf-flexbox-grid(
-                                $from: tablet-portrait,
-                                $use-equal-heights: true,
-                                $centered-grid: true,
-                                $enable-gutters: true,
-                                $gridcell-width: one-third,
-                                $gutter: 2%,
-                                $row-gutter: 1.25rem
-                            );
-
-                            & > [role="gridcell"] {
-
-                                justify-content: start;
-
-                                & > section {
-
-                                    & > div {
-                                    
-                                        text-align: left;
-                                    }
-                                }
-                            }
-                        }
                     }
                 }
 
