Currency input now collapses whitespace

--- a/styleguide/scss/core/_core-forms.scss
+++ b/styleguide/scss/core/_core-forms.scss
@@ -192,6 +192,12 @@ form, [role="form"] {
 
             &[currency] {
 
+                font-size: 0;
+
+                & > * {
+                    font-size: initial;
+                }
+
                 span {
                     display: inline-block;
                     width: 1rem;
